--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 body{
     width: 100%;
@@ -89,5 +89,8 @@ body::-webkit-scrollbar{
     }
     .items{
         width: 50%;
+    }
+    #terms{
+        display: none;
     }
 }
